all features fine now, and only goals filter and insight filter need to be fine tune, ready to do the test and enhancement

--- a/DotnetFinancialTrackerApp/Components/Dialogs/EditTransactionDialog.razor
+++ b/DotnetFinancialTrackerApp/Components/Dialogs/EditTransactionDialog.razor
@@ -21,7 +21,7 @@
                            RequiredError="Please select a family member">
                     @foreach (var member in _familyMembers)
                     {
-                        <MudSelectItem Value="member">@member.Name</MudSelectItem>
+                        <MudSelectItem Value="@member">@member.Name</MudSelectItem>
                     }
                 </MudSelect>
 
@@ -34,7 +34,7 @@
                            RequiredError="Category is required">
                     @foreach (var category in _categories)
                     {
-                        <MudSelectItem Value="category">@category.Name</MudSelectItem>
+                        <MudSelectItem Value="@category">@category.Name</MudSelectItem>
                     }
                 </MudSelect>
 
