--- a/DotnetFinancialTrackerApp/Components/Dialogs/QuickActionsDialog.razor
+++ b/DotnetFinancialTrackerApp/Components/Dialogs/QuickActionsDialog.razor
@@ -86,7 +86,7 @@
 
     private void NavigateToBudgets()
     {
-        Nav.NavigateTo("/finance");
+        Nav.NavigateTo("/wellbeing");
         Dialog.Close();
     }
 
